import ITranslationSchema from "@/types/ITranslationSchema";

const translationFR: ITranslationSchema = {
	welcome: "Bienvenue",
	greeting: "Bonjour, {{name}} !",
	chooseMode: {
		title: "Bon retour",
		subtitle: "Comment voulez-vous continuer aujourd'hui ?",
		employerTitle: "Vue employeur",
		employerDesc: "Gérez votre équipe, plannings et paie",
...
