appId: "com.mur-dev.MyWitnessTree"
---
- launchApp
- tapOn: "Français"
- assertVisible: "Bienvenue"
- tapOn: "English"
- assertVisible: "Welcome"